# Sybil-Shield-

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_HETZNER.md  LICENSE  README.md  SECURITY.md  STATUS.md  SybilShield_Project_Description.md  SybilShield_Technical_Spec.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  railway.toml
apps/ml/: Dockerfile  pyproject.toml
apps/ml/sybilshield/: __init__.py  ingest.py  pipeline.py  service.py  types.py
apps/ml/sybilshield/clustering/: __init__.py  behavior_cluster.py  cross_chain.py  funding_cluster.py  graph_community.py  merge.py
apps/ml/sybilshield/data/: build_features.py  curate.py  derive_ens_veterans.py  derive_governance_voters.py  derive_known_exchanges.py  derive_power_users.py  derive_snapshot_voters.py  holdout.py  known_exchanges.py  seed_sybil.py
apps/ml/sybilshield/data/labeled/: manifest.yaml
apps/ml/sybilshield/eval/: __init__.py  adversarial.py  drift.py  drift_check_job.py
apps/ml/sybilshield/evidence/: __init__.py  generator.py
apps/ml/sybilshield/features/: __init__.py  behavioral.py  combine.py  funding.py  graph.py  temporal.py
apps/ml/sybilshield/providers/: alchemy.py  base.py  mock.py
apps/ml/sybilshield/scoring/: __init__.py  model.py  predict.py  presets.py  retrain.py  retrain_full.py  train.py
apps/ml/tests/: test_clustering.py  test_curate.py  test_derive.py  test_features.py  test_pipeline.py  test_retrain.py  test_scoring_eval.py
content/: twitter-linea-thread.md
(+202 files in other folders)
