[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sybilshield"
version = "0.1.0"
description = "SybilShield ML pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "hdbscan>=0.8.36",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "requests>=2.32",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["sybilshield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
